--- a/styles.css
+++ b/styles.css
@@ -425,6 +425,8 @@ body {
     width: 16px;
     height: 16px;
     flex-shrink: 0;
+    margin-left: 0;  /* No left margin */
+    margin-right: 0; /* No right margin */
 }
 
 .creator-username {
